--- a/aura-archetype/pom.xml
+++ b/aura-archetype/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.auraframework</groupId>
     <artifactId>aura-framework</artifactId>
-    <version>0.3354.48.1</version>
+    <version>0.3354.48.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
