--- a/aura-interfaces/pom.xml
+++ b/aura-interfaces/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>aura-framework</artifactId>
         <groupId>org.auraframework</groupId>
-        <version>0.3354.48.1</version>
+        <version>0.3354.48.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
